<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/layout_prev"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cinza"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageViewPrevCapa"
            android:layout_width="210dp"
            android:layout_height="160dp"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:srcCompat="@drawable/padrao" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:paddingLeft="5dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPrevTitulo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/archivo_black"
                    android:paddingRight="3dp"
                    android:text="What is Lorem Ipsum?"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <ImageButton
                    android:id="@+id/imageButtonPrevClose"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:background="@android:color/transparent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/ic_cancel_24" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPrevAno"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2022"
                    android:textColor="@color/whitelite" />

                <TextView
                    android:id="@+id/textViewPrevRestri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/design_default_color_error"
                    android:fontFamily="@font/archivo_black"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="16"
                    android:textColor="@color/whitelite"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/textViewPrevDuracao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1h 3m"
                    android:textColor="@color/whitelite" />
            </LinearLayout>

            <TextView
                android:id="@+id/textViewPrevDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="5"
                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five"
                android:textColor="@color/white"
                android:textSize="16sp" />

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_MaisInfo"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonPrevAssistir"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dp"
                android:layout_weight="1"
                android:drawableLeft="@drawable/ic_round_play_arrow_24"
                android:text="@string/assistir"
                android:theme="@style/Button.previa" />

            <Button
                android:id="@+id/buttonPrevDown"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_weight="1"
                android:text="@string/download"
                android:theme="@style/Button.previa"
                app:icon="@drawable/ic_dpwn_bottom_24"
                app:iconTint="@color/black" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="7dp"
            android:background="@color/whitelite" />

        <TextView
            android:id="@+id/textView12MaisInformacoes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawableLeft="@drawable/ic_lerta_24"
            android:drawableRight="@drawable/ic_right_24"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:text="@string/mais_informacoes"
            android:textColor="@color/whitelite"
            android:textSize="20sp" />
    </LinearLayout>

</LinearLayout>