<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:fillViewport="true"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:orientation="vertical"
    tools:context=".activity.VisualizarActivity">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginTop="5dp">

                <ImageView
                    android:id="@+id/imageView11"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:srcCompat="@drawable/teste1" />

                <ImageView
                    android:id="@+id/imageView12CapaFilme"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/imageView11"
                    app:layout_constraintTop_toTopOf="@+id/imageView11"
                    app:srcCompat="@drawable/padrao" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <TextView
                android:id="@+id/textViewVisuTitulo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="Lorem Ipsum is simply dummy text of the printing "
                android:textColor="@color/white"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="2dp"
                android:orientation="horizontal"
                android:paddingTop="6dp">

                <TextView
                    android:id="@+id/textViewVisuAnoLancamento"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="2022"
                    android:textColor="@color/whitelite" />

                <TextView
                    android:id="@+id/textViewVisuRestri"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="5dp"
                    android:background="@color/design_default_color_error"
                    android:fontFamily="@font/archivo_black"
                    android:gravity="center"
                    android:padding="3dp"
                    android:text="16"
                    android:textColor="@color/whitelite"
                    android:textSize="10sp" />

                <TextView
                    android:id="@+id/textViewVisuDuracao"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="1h 3m"
                    android:textColor="@color/whitelite" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/buttonVisuAssistir"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_round_play_arrow_24"
                    android:padding="10dp"
                    android:text="player 1"
                    android:theme="@style/Button.previa"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/buttonVisuAssistir2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:drawableLeft="@drawable/ic_round_play_arrow_24"
                    android:padding="10dp"
                    android:text="Player 2"
                    android:theme="@style/Button.previa"
                    android:visibility="gone"
                    tools:visibility="visible" />

                <Button
                    android:id="@+id/buttonVisuDownload"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:drawableLeft="@drawable/ic_download_24"
                    android:padding="10dp"
                    android:text="@string/download"
                    android:textColor="@color/whitemedio"
                    android:theme="@style/Button.download"
                    android:visibility="gone"
                    tools:visibility="visible" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewVisuDescricao"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it"
                android:textColor="@color/white" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/direcao"
                        android:textColor="@color/whitelite" />

                    <TextView
                        android:id="@+id/textViewVisuDirecao"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_weight="1"
                        android:text="TextView"
                        android:textColor="@color/whitelite" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/estrelando"
                        android:textColor="@color/whitelite" />

                    <TextView
                        android:id="@+id/textViewVisuElenco"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:text="TextView"
                        android:textColor="@color/whitelite" />


                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/textVie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="Assista na sua tv smart ou computador"
                android:textColor="@color/white"
                android:textSize="20sp" />

            <Button
                android:id="@+id/buttonAssistirAgora"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_weight="1"
                android:padding="10dp"
                android:text="Assistir agora"
                android:textSize="16sp"
                android:theme="@style/Button.previa" />

            <com.google.android.gms.ads.AdView
                android:id="@+id/adViewvisualizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:adSize="LARGE_BANNER"
                app:adUnitId="ca-app-pub-6422137823083835/6181580601"></com.google.android.gms.ads.AdView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linarLayoutLista"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="15dp"
                    android:gravity="center"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/imageViewAddListaFavorito"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_adicionar_24" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="Minha lista"
                        android:textColor="@color/white" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/problema"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_error_24" />

                    <TextView
                        android:id="@+id/textView16s"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Relatar problema"
                        android:textColor="@color/white" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        app:srcCompat="@drawable/ic_view" />

                    <TextView
                        android:id="@+id/textView16Views"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Views: 5685"
                        android:textColor="@color/white" />

                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:drawableTop="@drawable/ic_lerta_24"
                    android:padding="10dp"
                    android:text="Compartilhar"
                    android:textColor="@color/white"
                    android:visibility="gone" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="20dp"
                android:background="@color/cinza" />

            <View
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:layout_marginBottom="5dp"
                android:background="@color/white" />

            <TextView
                android:id="@+id/textViewOpcoesSemelhantes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:fontFamily="@font/archivo_black"
                android:text="@string/opcoes_semelhantes"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:visibility="gone"
                tools:visibility="visible" />

            <Spinner
                android:id="@+id/spinnerTemporada"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:background="@drawable/spinnertemporada"
                android:dropDownWidth="wrap_content"
                android:spinnerMode="dropdown"
                android:visibility="visible"
                tools:visibility="visible" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerviewSemelhantes"
                android:layout_width="match_parent"
                android:layout_height="500dp" />

        </LinearLayout>
    </ScrollView>

